--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-    
-    </body>
+
+<head>
+    <title> universidad HTML </title>
+    <meta charset="UTF-8">
+    <!--tipo de caracteres que puede usar en html como acentos en palabras-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <h1>Curso universidad HTML</h1>
+    <p>pagina HTML</p>
+
+
+    <h2>Elementos html</h2>
+    <h3>Elementos html</h3>
+    <h4>Elementos html</h4>
+    <h5>Elementos html</h5>
+    <h6>Elementos html</h6>
+
+    <p>primer parrafo <br> segunda linea pararfo</p>
+    <hr>
+    <P>MAS TEXTO aqui</P>
+    <a href="http://coolermaster.com" target="_blank">pagina PC</a>
+    <br>
+    <a href="pagina1.html">pagina 1</a>
+
+
+</body>
+
 </html>
