--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <a href="pagina1.html">pagina 1</a>
     <br>
 
-    <img src="img/html5.png" alt="html" width="100px">
-    <img src="img/css.png" alt="css" width="100">
-    <img src="img/js.png" alt="js logo" width="110">
+
+    <img class="ht" src="img/html5.png" alt="">
+
+
+
 
 
 </body>
