--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <!--tipo de caracteres que puede usar en html como acentos en palabras-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,6 +30,8 @@
 
 
 <img class="git" src="img/4.jpg">
+<img  class="js" src="img/js.png" alt="js">
+<img class="ht"  src="img/html5.png" alt="html">
 
 
 
