--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <img class="git" src="img/4.jpg">
 <img  class="js" src="img/js.png" alt="js">
 <img class="ht"  src="img/html5.png" alt="html">
+<img class="css" src="img/css.png" alt="css">
 
 
 
