--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <p>primer parrafo <br> segunda linea pararfo</p>
     <hr>
-    <P>MAS TEXTO aqui</P>
+    <P> <b>TEXTO aqui</b> </P> <!--la etiqueta b es para negrilla en el texto-->
     <a href="http://coolermaster.com" target="_blank">pagina PC</a>
     <br>
     <a href="pagina1.html">pagina 1</a>
@@ -35,7 +35,9 @@
 <img class="css" src="img/css.png" alt="css">
 
 
-
+<p>noveno parrafo H<sub>2</sub>0</p>
+<p>&gt; simbolo mayor que </p>
+<p>&lt; simbolo menor que </p>
 
 
 
