--- a/pagina1.html
+++ b/pagina1.html
@@ -7,8 +7,14 @@
     <title>pagina1</title>
 </head>
 <body>
-    <p>nuevo contenido</p>
-    <a href="index.html">ir al inicio</a>
+    <h1> Universidad html </h1>
+    <hr>
+    <a href="index.html">inicio</a>
+    |
+    <a href="contacto.html">contacto</a>
+    |
+    <a href="acerca.html">acerca de</a>
+    <p>Bienvenidos al curso de HTML </p>
     
 </body>
 </html>
