--- a/pagina1.html
+++ b/pagina1.html
@@ -16,6 +16,13 @@
     |
     <a href="acerca.html">acerca de</a>
     <p class="html" >Bienvenidos al curso de HTML </p>
+
+    <a href="https://cdn.coolermaster.com/media/assets/1033/mch500m_g1-image.png"></a>
     
+
+
+
+
+
 </body>
 </html>
