--- a/tablas.html
+++ b/tablas.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+    <table>
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>Juan</td>
+            <td>Perez</td>
+            <td>Jperez@gmail.com</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>Perez</td>
+            <td>Mperez@gmail.com</td>
+        </tr>
+    </table>
     
 </body>
 </html>
