--- a/tablas.html
+++ b/tablas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
     <table>
         <tr>
@@ -25,6 +27,26 @@
             <td>Mperez@gmail.com</td>
         </tr>
     </table>
-    
+    <br>
+
+    <table class="tabla2">
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>Amy</td>
+            <td>ardila</td>
+            <td>Aardila@gmail.com</td>
+        </tr>
+        <tr>
+            <td>stefanny</td>
+            <td>Barrera</td>
+            <td>sbarrera@gmail.com</td>
+        </tr>
+    </table>
+
 </body>
+
 </html>
