--- a/listas2.html
+++ b/listas2.html
@@ -14,6 +14,18 @@
         <li>css</li>
         <li>react</li>
     </ol>
+
+    <h1>frameworks javascript</h1>
+    <dl>
+        <dt>javascript:</dt>
+        <dd> react</dd>
+    </dl>
+    
+<!--elementos inline y block-->
+    <h2>elementos inline y block</h2>
+    <p>elemento span (inline)</p>
+    <p></p>
+
     
 </body>
 </html>
