--- a/listas2.html
+++ b/listas2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>listas ordenadas</title>
     <link rel="stylesheet" href="estilos2.css">
 </head>
+
 <body>
     <ol>
         <li>javascript</li>
@@ -20,12 +22,21 @@
         <dt>javascript:</dt>
         <dd> react</dd>
     </dl>
-    
-<!--elementos inline y block-->
+
+    <!--elementos inline y block-->
     <h2>elementos inline y block</h2>
     <p>elemento span (inline)</p>
-    <p></p>
+    <p>texto donde vamos a <span style="color: rgb(209, 34, 34);"></span> enfatizar y cambiar el color </p>
+    <!--elementos block-->
 
-    
+    <h3> elementos block (div)</h3>
+    <div>
+        <h2>titulo del div</h2>
+        <p>texto dentro del div</p>
+    </div>
+
+    <p class="div1">texto fuera del div</p>
+
 </body>
+
 </html>
