--- a/listas2.html
+++ b/listas2.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+
+    <!--combinado con linea 44-->
+    <h4 id="python">python</h4>
+
     <ol>
         <li>javascript</li>
         <li>html</li>
@@ -36,6 +40,16 @@
     </div>
 
     <p class="div1">texto fuera del div</p>
+    
+    <a href="#python">python</a>
+
+    <!--iframes-->
+    <h1>uso de iframe</h1>
+    <iframe src="texto.html" frameborder="0"></iframe>
+
+
+
+
 
 </body>
 
