--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Curso universidad HTML</h1>
     <p>pagina HTML</p>
- 
+
 
 
     <h2>Elementos html</h2>
@@ -23,26 +23,37 @@
 
     <p>primer parrafo <br> segunda linea pararfo</p>
     <hr>
-    <P> <b>TEXTO aqui</b> </P> <!--la etiqueta b es para negrilla en el texto-->
+    <P> <b>TEXTO aqui</b> </P>
+    <!--la etiqueta b es para negrilla en el texto-->
     <a href="http://coolermaster.com" target="_blank">pagina PC</a>
     <hr>
     <a href="pagina1.html">pagina 1</a>
     <br>
 
 
-<img class="git" src="img/4.jpg">
-<img  class="js" src="img/js.png" alt="js">
-<img class="ht"  src="img/html5.png" alt="html">
-<img class="css" src="img/css.png" alt="css">
+    <img class="git" src="img/4.jpg">
+    <img class="js" src="img/js.png" alt="js">
+    <img class="ht" src="img/html5.png" alt="html">
+    <img class="css" src="img/css.png" alt="css">
 
 
-<p>noveno parrafo H<sub>2</sub>0</p>
-<p>&gt; simbolo mayor que </p>
-<p>&lt; simbolo menor que </p>
+    <p>noveno parrafo H<sub>2</sub>0</p>
+    <p>&gt; simbolo mayor que </p>
+    <p>&lt; simbolo menor que </p>
 
-<a href="https://www.freecodecamp.org/">
-    <button class="boton">freeCodeCamp</button>
-  </a> 
+    <a href="https://www.freecodecamp.org/">
+        <button class="boton">freeCodeCamp</button>
+    </a>
+
+
+    <!--formularios-->
+    <h1>formularios</h1>
+    <form>
+        <label for="name">Nombre:</label>
+        <input type="text"  id="name"> <br>
+        <input type="submit" value="Enviar">
+
+    </form>
 
 
 </body>
