--- a/listas2.html
+++ b/listas2.html
@@ -45,7 +45,8 @@
 
     <!--iframes-->
     <h1>uso de iframe</h1>
-    <iframe src="texto.html" frameborder="0"></iframe>
+    <iframe src="texto.html" name="marco1" class="marco"></iframe>
+    <a href="https://www.coolermaster.com/" target="marco1" class="boton">sitio cooler master</a>
 
 
 
