--- a/texto.html
+++ b/texto.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos2.css">
 </head>
 <body>
+    <h1 class="titulo">nueva pagina agregar al iframe</h1>
+    <p>este es un nuevo parrafo</p>
     
 </body>
 </html>
