--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1>formularios</h1>
     <form>
         <label for="name">Nombre:</label>
-        <input type="text"  id="name"> <br>
+        <input type="text"  id="name">
         <input type="submit" value="Enviar">
 
     </form>
