--- a/index.html
+++ b/index.html
@@ -50,10 +50,28 @@
     <h1>formularios</h1>
     <form>
         <label for="name">Nombre:</label>
-        <input type="text"  id="name">
+        <input type="text" id="name" placeholder="Tu Nombre" required="true"> <br><br>
+        <label for="apellido">Apellido:</label>
+        <input type="text" id="apellido" placeholder="Tu Apellido" required="true">
+        <br><br>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email"><br>
+
+        <label for="edad">Edad</label>
+        <input type="number" id="edad" name="edad">
+        <br>
+        <label>Genero:</label><br>
+        <input type="radio" id="femenino" name="Genero" value="femenino">
+        <label for="femenino">Femenino</label><br>
+        <input type="radio" id="masculino" name="Genero" value="masculino">
+        <label for="maculino">maculino</label>
+
+        <br>
         <input type="submit" value="Enviar">
+        <input type="submit" formnovalidate="formnovalidate" value="Enviar sin validar">
 
     </form>
+
 
 
 </body>
