genero de musica

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         <input type="radio" id="femenino" name="Genero" value="femenino">
         <label for="femenino">Femenino</label><br>
         <input type="radio" id="masculino" name="Genero" value="masculino">
-        <label for="maculino">maculino</label>
+        <label for="maculino">maculino</label><br>
+
+        <label>Genero de musica favorita</label><br>
+        <input type="text">
 
         <br>
         <input type="submit" value="Enviar">
