--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     <h1>formularios</h1>
     <form>
         <fieldset>
-
-
+            <legend>Datos de Persona:</legend>
             <label for="name">Nombre:</label>
             <input type="text" id="name" placeholder="Tu Nombre" required="true"> <br><br>
             <label for="apellido">Apellido:</label>
