--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <br>
             <input type="submit" value="Enviar">
             <input type="submit" formnovalidate="formnovalidate" value="Enviar sin validar">
+            <input type="reset" value="Restablecer">
+        
+        
         </fieldset>
 
 
