--- a/formulario.html
+++ b/formulario.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario</title>
+    <link rel="stylesheet" href="formulario.css">
+    <title>Formulario Login</title>
+
 </head>
+
 <body>
-    
+    <div class="contenedor">
+        <h2>Login</h2>
+        <form id="forma" name="forma" method="POST">
+            <div class="elemento">
+                <label for="usuario">Usuario</label>
+                <input type="text" id="usuario" name="usuario" required="true">
+            </div>
+            <div class="elemento">
+                <label for="password">password</label>
+                <input type="password" id="password" name="password" required="true">
+            </div>
+        </form>
+    </div>
+
+
 </body>
+
 </html>
