--- a/formulario.html
+++ b/formulario.html
@@ -22,6 +22,9 @@
                 <label for="password">password</label>
                 <input type="password" id="password" name="password" required="true">
             </div>
+            <div class="elemento">
+                <input type="submit" value="Enviar">
+            </div>
         </form>
     </div>
 
