--- a/semantico.html
+++ b/semantico.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="semantico.css">
     <title>Etiquetas semanticas en html</title>
 </head>
+
 <body>
-    
+    <!--cabecera de la pagina web HEADER-->
+    <!--https://www.aulaclic.es/articulos/graficos/estructura-html5.jpg-->
+    <!--Las etiquetas semánticas ayudan a definir la estructura del documento y 
+        permiten que las páginas web sean mejor indexadas por los buscadores. 
+        Una etiqueta se califica como semántica si tiene que ver el significado,
+         es decir, si nos informa sobre lo que trata su contenido.-->
+    <header>
+        <h1>Etiquetas semanticas en HTML5</h1>
+    </header>
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Servicios</a>
+        <a href="#">Contacto</a>
+        <a href="#">Acerca de</a>
+    </nav>
+    <section>
+        <h2>Seccion 1</h2>
+        <p>Informacion de la seccion</p>
+        <aside>
+            <p>Nombre del Autor</p>
+        </aside>
+    </section>
+    <section>
+        <h2>seccion 2</h2>
+        <article>
+            <h3>Articulo 2</h3>
+        </article>
+        <article>
+            <h3>Articulo 3</h3>
+        </article>
+    </section>
+    <footer>
+        <h2>
+            <a href="https://www.coolermaster.com/">Cooler master</a>
+        </h2>
+    </footer>
 </body>
+
 </html>
