--- a/css/index.html
+++ b/css/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <title>Css Puro</title>
-    
-</head>
+    </head>
 <body>
-    
+    <h1>Universidad Css</h1>
+   
 </body>
 </html>
