--- a/css/index.html
+++ b/css/index.html
@@ -9,6 +9,7 @@
     </head>
 <body>
     <h1>Universidad Css</h1>
+    <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, illo asperiores assumenda molestias, cumque impedit officia nam nostrum inventore atque exercitationem consectetur sapiente culpa similique magnam eaque, commodi veniam ab?</p>
    
 </body>
 </html>
